# uplimblibrary_v2

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_clean.sh  readme.md  ul-config.cmake.in
config/: controller_paras_i3_dual_arm.yaml  controller_paras_i3_upper_body.yaml  controller_paras_robot_180.yaml  controller_paras_upper_body.yaml  controller_paras_upper_body_nw.yaml  controller_paras_wa1.yaml  controller_paras_wa2.yaml  robot_define_WA1.yaml  robot_define_dual_8dof.yaml  robot_define_dual_8dof_wa2.yaml  robot_define_i3_dual_arm.yaml  robot_define_i3_upper_body.yaml  robot_define_robot_180.yaml  robot_define_upper_body.yaml  robot_define_upper_body_nw.yaml  robot_define_wa2.yaml  robot_define_wa3.yaml
demos/: CMakeLists.txt
demos/ulCoachDemo/: CMakeLists.txt  ulCoachDemo.cpp
demos/ulCubicSplineDemo/: CMakeLists.txt  ulCubicSplineDemo.cpp
demos/ulDynamicsDemo/: CMakeLists.txt  ulDynamicsDemo.cpp
demos/ulEulerAnglesDemo/: CMakeLists.txt  ulEulerAnglesDemo.cpp
demos/ulForwardKinematicsDemo/: CMakeLists.txt  ulForwardKinematicsDemo.cpp
demos/ulIKDemo/: CMakeLists.txt  ulIKDemo.cpp
demos/ulModifiedDenavitHartenbergDemo/: CMakeLists.txt  ulModifiedDenavitHartenbergDemo.cpp
demos/ulMoveJDemo/: CMakeLists.txt  ulMoveJDemo.cpp
demos/ulMujocoDemo/: main_mujoco.py
demos/ulMujocoDemo/mujoco_system/: __init__.py  config.py  keyboard_controller.py  mujoco_simulator.py  plot_send.py  task_definition.py  task_executor.py
demos/ulQuaternionDemo/: CMakeLists.txt  ulQuaternionDemo.cpp
demos/ulSShapeVelocityDemo/: CMakeLists.txt  ulSShapeVelocityDemo.cpp
demos/ulUplimbControllerMujocoDemo/: CMakeLists.txt  ulUplimbControllerMujoco (copy).cpp  ulUplimbControllerMujoco.cpp
demos/ulUplimbControllerMujocoDemo/include/: DataExchange.h  InputHandler.h  MjController.h  MujocoSimulator.h  ThreadManager.h  Visualization.h  plot.h  plot_pipe.h  task.h  utility.h
demos/ulUplimbControllerMujocoDemo/other/: DataExchange2.cpp  DataExchange2.h
demos/ulUplimbControllerMujocoDemo/src/: DataExchange.cpp  InputHandler.cpp  MjController.cpp  MujocoSimulator.cpp  ThreadManager.cpp  Visualization.cpp
demos/ulUplimbControllerRaisimDemo/: CMakeLists.txt  ulUplimbControllerRaisimDemo.cpp
models/: A3_Pro_dual_arm.urdf  I3_UpperBody.urdf  I3_dual_arm.urdf  Robot_180.urdf  URDF-H1_Pro-UPPER_BODY_ROBOT.urdf  URDF-H1_Pro-UPPER_BODY_ROBOT_NW.urdf  URDF_WA1.urdf  WA2.urdf  WA2_A2_Lite_V2.urdf  WA2_A2_lite_F.urdf  WA3.urdf
src/: CMakeLists.txt
src/ul/: version.h.in
src/ul/controller/: Body.cpp  Body.h  CMakeLists.txt  CartesianMotion.cpp  CartesianMotion.h  CartesianMotion_cpp_mod  Controller.cpp  Controller.h  ControllerWrapper.cpp  ControllerWrapper.h  InteractionControl.cpp  InteractionControl.h  JointsMotion.cpp  JointsMotion.h  JointsSecurity.cpp  JointsSecurity.h  MotionAdapter.h  MotionStrategy.h  RobotFactory.cpp  RobotFactory.h  Teach.cpp  Teach.h  pid_msd.cpp  pid_msd.h
src/ul/hal/: AxisController.cpp  AxisController.h  CMakeLists.txt  Coach.cpp  Coach.h  CyclicDevice.cpp  CyclicDevice.h  JointAccelerationActuator.cpp  JointAccelerationActuator.h  JointControlWord.cpp  JointControlWord.h  JointCurrentSensor.cpp  JointCurrentSensor.h  JointMode.cpp  JointMode.h  JointModeOperation.cpp  JointModeOperation.h  JointOffsetTorqueActuator.cpp  JointOffsetTorqueActuator.h  JointOffsetVelocityActuator.cpp  JointOffsetVelocityActuator.h  JointPositionActuator.cpp  JointPositionActuator.h  JointPositionSensor.cpp  JointPositionSensor.h  JointStatusWord.cpp  JointStatusWord.h  JointTorqueActuator.cpp  JointTorqueActuator.h  JointTorqueSensor.cpp  JointTorqueSensor.h  JointVelocityActuator.cpp  JointVelocityActuator.h  JointVelocitySensor.cpp  JointVelocitySensor.h
src/ul/math/: CMakeLists.txt  Constants.h  FourierSeries.h  Function.h  Matrix.h  MatrixBaseAddons.h  Polynomial.h  PolynomialQuaternion.h  Pose2Transformation.h  Quaternion.h  QuaternionBaseAddons.h  Real.h  Rotation.h  SShapeVelocity.h  SShapeVelocity_back_h  SingleSShapeVelocity.h  Spatial.h  Spline.h  SplineQuaternion.h  Transform.h  TransformAddons.h  TypeTraits.h  Vector.h  algorithm.h
src/ul/math/spatial/: ArticulatedBodyInertia.h  ArticulatedBodyInertia.hxx  ForceVector.h  ForceVector.hxx  MotionVector.h  MotionVector.hxx  PlueckerTransform.h  PlueckerTransform.hxx  RigidBodyInertia.h  RigidBodyInertia.hxx
src/ul/mdl/: AnalyticalInverseKinematics.cpp  AnalyticalInverseKinematics.h  CMakeLists.txt  Dynamic.cpp  Dynamic.h  Kinematic.cpp  Kinematic.h  Model.cpp  Model.h
src/ul/pack/: CMakeLists.txt  UplimbController.cpp  UplimbController.h
src/ul/std/: ButterworthFilter.cpp  ButterworthFilter.h  CMakeLists.txt  DebugShareBuffer.cpp  DebugShareBuffer.h  Differentiator.cpp  Differentiator.h  DoubleBuffer.h  GaussianFilter.cpp  GaussianFilter.h  Socket.h  algorithm.h  common.h  errorCode.h  fileSave.h  iterator.h
